[project]
name = "pulsar-release-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "duckdb>=1.4.1",
    "scanpy>=1.11.4",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
