[project]
name = "pulsar"
version = "0.1.0"
description = "PULSAR (Patient Understanding Leveraging Single-cell universAl Representation) is a multi-scale, multi-cellular foundation model for human peripheral immunity that bridges single-cell atlases with clinical phenotypes. PULSAR hierarchically integrates information from genes to cells to multicellular systems, trained via self-supervision on 36.2 million cells from 6,807 donors."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.2.0",
    "duckdb>=1.4.1",
    "scanpy>=1.11.4",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
